6-todo-service/services/config/envoy-proxy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/users"
                route:
                  cluster: users-service-cluster
              - match:
                  prefix: "/tasks"
                route:
                  cluster: tasks-service-cluster
          http_filters:
          - name: envoy.filters.http.router

  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/tasks"
                route:
                  cluster: tasks-service-cluster
              - match:
                  prefix: "/users"
                route:
                  cluster: users-service-cluster
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: {filename: "/etc/envoy-cert.pem"}
                private_key: {filename: "/etc/envoy-private.pem"}

  clusters:
  - name: users-service-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: users-service-cl-name
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: users-service
                port_value: 5000
  - name: tasks-service-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: tasks-service-cl-name
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: tasks-service
                port_value: 6000
